+ Adding actual contents to the website. Modifying the CSS for them.

--- a/autumnyard.com/index.html
+++ b/autumnyard.com/index.html
@@ -13,11 +13,48 @@
 		<![endif]-->
 	</head>
 
-	<body class="animated bounceInDown">
-		<div class="avatar">
+	<body>
+		<div class="animated bounceInDown avatar">
 			<p class="title"><img src="img/photo_2.jpg" alt="Photo"></p>
 			<p class="title">Pablo de la Ossa</p>
+			<p class="subtitle">Autumn Yard</p>
 		</div>
+
+
+		<div class="content">
+			<p class="section">Games</p>
+
+			<p class="subsection">My recent projects:</p>
+			<p><a href="http://autumnyard.com/BaseProject2D">Base Project 2D</a></p>
+			<p><a href="https://ldjam.com/events/ludum-dare/38/definitive-war/">Definitive War (Ludum Dare 38 Jam)</a></p>
+
+			<p class="subsection">Follow me in:</p>
+			<p><a href="https://github.com/autumnyard">Github</a></p>
+			<p><a href="https://ldjam.com/users/undi">Ludum Dare</a></p>
+			<p><a href="https://undi.itch.io/">itch.io</a></p>
+		</div>
+
+
+		<div class="content ">
+			<p class="section">Music</p>
+
+			<p class="subsection">Missing Date</p>
+			<p>I'm currently doing retrowave.</p>
+			<p><a href="https://www.youtube.com/channel/UCd--jEmlNGynp0JBYxZHUzQ">Youtube</a></p>
+			<p><a href="https://soundcloud.com/missingdate">SoundCloud</a></p>
+		</div>
+
+
+		<div class="content ">
+			<p class="section">Photography</p>
+			<p><a href="https://500px.com/missingdate">500px</a></p>
+		</div>
+
+<!-- 
+		<div class="footer social-icons">
+			<a class="instagram" href="https://www.instagram.com/bonitapersona/">a</a>
+		</div>
+ -->
 	</body>
 
 </html>
