--- a/autumnyard.com/index.html
+++ b/autumnyard.com/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Pablo de la Ossa</title>
+		<title>Pablo de la Ossa ~ Autumn Yard</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.css">
 
@@ -24,22 +24,39 @@
 		<div class="content">
 			<p class="section">Games</p>
 
-			<p class="subsection">My recent projects:</p>
-			<p><a href="http://autumnyard.com/BaseProject2D">Base Project 2D</a></p>
-			<p><a href="https://ldjam.com/events/ludum-dare/38/definitive-war/">Definitive War (Ludum Dare 38 Jam)</a></p>
+			<p class="subsection">My recent projects</p>
+			<p>
+				Unity Base Project 2D: <br/>
+				<a href="http://autumnyard.com/BaseProject2D">Test it</a> and then
+				<a href="https://github.com/autumnyard/BaseProject2D">Check on github</a>
+			</p>
+			<p>
+				My Ludum Dare 38 Jam entry: <br/>
+				<a href="https://ldjam.com/events/ludum-dare/38/definitive-war/">Definitive War</a>
+			</p>
 
-			<p class="subsection">Follow me in:</p>
+			<p class="subsection">Follow me</p>
 			<p><a href="https://github.com/autumnyard">Github</a></p>
 			<p><a href="https://ldjam.com/users/undi">Ludum Dare</a></p>
 			<p><a href="https://undi.itch.io/">itch.io</a></p>
+			<p><a href="https://www.twitch.tv/autumnyard">twitch.tv</a></p>
+
 		</div>
 
 
 		<div class="content ">
 			<p class="section">Music</p>
 
-			<p class="subsection">Missing Date</p>
-			<p>I'm currently doing retrowave.</p>
+			<p>I write music under the name Missing Date.</p>
+			<p class="subsection">Retrowave</p>
+			<p>I'm currently working on my sound.</p>
+
+			<p class="subsection">Video game music</p>
+			<!-- <p>Video game music:</p> -->
+			<p><a href="https://soundcloud.com/missingdate/sets/wormwood-demos">Welcome to Wormwood demos (soundcloud)</a></p>
+			
+			<p class="subsection">Follow me</p>
+			<!-- <p>Follow me:</p> -->
 			<p><a href="https://www.youtube.com/channel/UCd--jEmlNGynp0JBYxZHUzQ">Youtube</a></p>
 			<p><a href="https://soundcloud.com/missingdate">SoundCloud</a></p>
 		</div>
@@ -48,6 +65,30 @@
 		<div class="content ">
 			<p class="section">Photography</p>
 			<p><a href="https://500px.com/missingdate">500px</a></p>
+
+			<!-- 
+			<p class="section">Personal</p>
+			<p>Antes de nada, 
+				<a href="https://dl.dropboxusercontent.com/u/12486477/CV/CV2017%20Pablo%20de%20la%20Ossa%20ES.pdf">mi Curriculum Vitae</a>
+				<strike>(<a href="https://500px.com/missingdate">in english</a></strike>)
+			</p>
+			<p>Contact me<a href="mailto:autumnyardworks@gmail.com"> by mail</a></p>
+			<p>And, although I'm not into social networks:</p>
+			<p><a href="https://www.instagram.com/bonitapersona/">Instagram</a></p>
+			<p><a href="https://twitter.com/undipablo">Twitter</a></p> 
+			-->
+		</div>
+
+		<div class="content ">
+			<p class="section">Personal</p>
+			<p>Antes de nada, 
+				<a href="https://dl.dropboxusercontent.com/u/12486477/CV/CV2017%20Pablo%20de%20la%20Ossa%20ES.pdf">mi Curriculum Vitae</a>
+				<strike>(<a href="https://www.youtube.com/watch?v=_v8rsPZbGt0">in english</a></strike>)
+			</p>
+			<p>Contact me<a href="mailto:autumnyardworks@gmail.com"> by mail</a></p>
+			<p>And, even though I'm not into social networks:</p>
+			<p><a href="https://www.instagram.com/bonitapersona/">Instagram</a></p>
+			<p><a href="https://twitter.com/undipablo">Twitter</a></p>
 		</div>
 
 <!-- 
