--- a/autumnyard.com/index.html
+++ b/autumnyard.com/index.html
@@ -38,7 +38,7 @@
 			<p class="subsection">Follow me</p>
 			<p><a href="https://github.com/autumnyard">Github</a></p>
 			<p><a href="https://ldjam.com/users/undi">Ludum Dare</a></p>
-			<p><a href="https://undi.itch.io/">itch.io</a></p>
+			<p><a href="https://autumnyard.itch.io/">itch.io</a></p>
 			<p><a href="https://www.twitch.tv/autumnyard">twitch.tv</a></p>
 
 		</div>
