--- a/autumnyard.com/index.html
+++ b/autumnyard.com/index.html
@@ -4,9 +4,11 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Pablo de la Ossa ~ Autumn Yard</title>
+		<title>Pablo de la Ossa ~ Autumn Yard ~ Missing Date</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.css">
+		  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
+		  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT Serif">
 
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -14,57 +16,66 @@
 	</head>
 
 	<body>
-		<div class="animated bounceInDown avatar">
+		<!-- <div class="animated bounceInDown avatar"> -->
+		<div class="animated avatar">
 			<p class="title"><img src="img/photo_2.jpg" alt="Photo"></p>
 			<p class="title">Pablo de la Ossa</p>
-			<p class="subtitle">Autumn Yard</p>
+			<p class="subtitle">Autumn Yard ~ Missing Date</p>
 		</div>
 
 
 		<div class="content">
 			<p class="section">Games</p>
 
+			<!-- <p class="normal">I make games under the name Autumn Yard.</p> -->
+
 			<p class="subsection">My recent projects</p>
-			<p>
+			<p class="normal">
 				Unity Base Project 2D: <br/>
 				<a href="http://autumnyard.com/BaseProject2D">Test it</a> and then
 				<a href="https://github.com/autumnyard/BaseProject2D">Check on github</a>
 			</p>
-			<p>
+			<p class="normal">
 				My Ludum Dare 38 Jam entry: <br/>
 				<a href="https://ldjam.com/events/ludum-dare/38/definitive-war/">Definitive War</a>
 			</p>
 
 			<p class="subsection">Follow me</p>
-			<p><a href="https://github.com/autumnyard">Github</a></p>
-			<p><a href="https://ldjam.com/users/undi">Ludum Dare</a></p>
-			<p><a href="https://autumnyard.itch.io/">itch.io</a></p>
-			<p><a href="https://www.twitch.tv/autumnyard">twitch.tv</a></p>
-
+			<!-- <p class="normal">
+				<a href="https://github.com/autumnyard">Github</a></br>
+				<a href="https://ldjam.com/users/undi">Ludum Dare</a></br>
+				<a href="https://autumnyard.itch.io/">itch.io</a></br>
+				<a href="https://www.twitch.tv/autumnyard">twitch.tv</a>
+			</p> -->
+			<p class="normal"><a href="https://github.com/autumnyard">Github</a></p>
+			<p class="normal"><a href="https://ldjam.com/users/undi">Ludum Dare</a></p>
+			<p class="normal"><a href="https://autumnyard.itch.io/">itch.io</a></p>
+			<p class="normal"><a href="https://www.twitch.tv/autumnyard">twitch.tv</a></p>
 		</div>
 
 
 		<div class="content ">
 			<p class="section">Music</p>
 
-			<p>I write music under the name Missing Date.</p>
+			<!-- <p class="normal">I write music under the name Missing Date.</p> -->
+
 			<p class="subsection">Retrowave</p>
-			<p>I'm currently working on my sound.</p>
+			<p class="normal">I'm currently working on my sound.</p>
 
 			<p class="subsection">Video game music</p>
 			<!-- <p>Video game music:</p> -->
-			<p><a href="https://soundcloud.com/missingdate/sets/wormwood-demos">Welcome to Wormwood demos (soundcloud)</a></p>
+			<p class="normal"><a href="https://soundcloud.com/missingdate/sets/wormwood-demos">Welcome to Wormwood demos (soundcloud)</a></p>
 			
 			<p class="subsection">Follow me</p>
 			<!-- <p>Follow me:</p> -->
-			<p><a href="https://www.youtube.com/channel/UCd--jEmlNGynp0JBYxZHUzQ">Youtube</a></p>
-			<p><a href="https://soundcloud.com/missingdate">SoundCloud</a></p>
+			<p class="normal"><a href="https://www.youtube.com/channel/UCd--jEmlNGynp0JBYxZHUzQ">Youtube</a></p>
+			<p class="normal"><a href="https://soundcloud.com/missingdate">SoundCloud</a></p>
 		</div>
 
 
 		<div class="content ">
 			<p class="section">Photography</p>
-			<p><a href="https://500px.com/missingdate">500px</a></p>
+			<p class="normal"><a href="https://500px.com/missingdate">500px</a></p>
 
 			<!-- 
 			<p class="section">Personal</p>
@@ -81,14 +92,14 @@
 
 		<div class="content ">
 			<p class="section">Personal</p>
-			<p>Antes de nada, 
+			<p class="normal">Antes de nada, 
 				<a href="https://dl.dropboxusercontent.com/u/12486477/CV/CV2017%20Pablo%20de%20la%20Ossa%20ES.pdf">mi Curriculum Vitae</a>
 				<strike>(<a href="https://www.youtube.com/watch?v=_v8rsPZbGt0">in english</a></strike>)
 			</p>
-			<p>Contact me<a href="mailto:autumnyardworks@gmail.com"> by mail</a></p>
-			<p>And, even though I'm not into social networks:</p>
-			<p><a href="https://www.instagram.com/bonitapersona/">Instagram</a></p>
-			<p><a href="https://twitter.com/undipablo">Twitter</a></p>
+			<p class="normal">Contact me<a href="mailto:autumnyardworks@gmail.com"> by mail</a></p>
+			<p class="normal">And, even though I'm not into social networks:</p>
+			<p class="normal"><a href="https://www.instagram.com/bonitapersona/">Instagram</a></p>
+			<p class="normal"><a href="https://twitter.com/undipablo">Twitter</a></p>
 		</div>
 
 <!-- 
