+ Added LDJAM39 Aesthetics Raider, and amoelcastellano.es.

--- a/autumnyard.com/index.html
+++ b/autumnyard.com/index.html
@@ -31,9 +31,17 @@
 
 			<p class="subsection">My recent projects</p>
 			<p class="normal">
+				My Ludum Dare 39 Compo entry: <br/>
+				<a href="https://ldjam.com/events/ludum-dare/39/aesthetics-raider">Aesthetics Raider</a>
+				</br>
+				<a href="https://dl.dropboxusercontent.com/u/12486477/LudumDare39/index.html">Play in browser</a>
+			</p>
+			<p class="normal">
 				Unity Base Project 2D: <br/>
-				<a href="http://autumnyard.com/BaseProject2D">Test it</a> and then
 				<a href="https://github.com/autumnyard/BaseProject2D">Check on github</a>
+				</br>
+				<a href="http://autumnyard.com/BaseProject2D">Play in browser</a>
+
 			</p>
 			<p class="normal">
 				My Ludum Dare 38 Jam entry: <br/>
@@ -72,10 +80,33 @@
 			<p class="normal"><a href="https://soundcloud.com/missingdate">SoundCloud</a></p>
 		</div>
 
-
 		<div class="content ">
-			<p class="section">Photography</p>
-			<p class="normal"><a href="https://500px.com/missingdate">500px</a></p>
+			<p class="section">Other projects</p>
+			<p class="subsection">Amo el castellano</p>
+			<p class="">Lista de equivalencias castellanas para anglicismos y barbarismos innecesarios.</p>
+			</br>
+			¿Cansado de que la gente utilice palabras inglesas para términos que ya existen en el castellano?
+			</br>
+			Vincúlales esta página y conviértete en un defensor del bien.
+			</br>
+			<a href="http://amoelcastellano.es">amoelcastellano.es</a>
+			</br>
+
+
+			<!-- 
+			<p class="section">Personal</p>
+			<p>Antes de nada, 
+				<a href="https://dl.dropboxusercontent.com/u/12486477/CV/CV2017%20Pablo%20de%20la%20Ossa%20ES.pdf">mi Curriculum Vitae</a>
+				<strike>(<a href="https://500px.com/missingdate">in english</a></strike>)
+			</p>
+			<p>Contact me<a href="mailto:autumnyardworks@gmail.com"> by mail</a></p>
+			<p>And, although I'm not into social networks:</p>
+			<p><a href="https://www.instagram.com/bonitapersona/">Instagram</a></p>
+			<p><a href="https://twitter.com/undipablo">Twitter</a></p> 
+			-->
+
+			<p class="subsection">Photography</p>
+			<p class="normal">Check my <a href="https://500px.com/missingdate">500px</a></p>
 
 			<!-- 
 			<p class="section">Personal</p>
@@ -89,6 +120,7 @@
 			<p><a href="https://twitter.com/undipablo">Twitter</a></p> 
 			-->
 		</div>
+
 
 		<div class="content ">
 			<p class="section">Personal</p>
