Updated LD39 and Valencia EP links.

--- a/autumnyard.com/index.html
+++ b/autumnyard.com/index.html
@@ -31,10 +31,13 @@
 
 			<p class="subsection">My recent projects</p>
 			<p class="normal">
-				My Ludum Dare 39 Compo entry: <br/>
-				<a href="https://ldjam.com/events/ludum-dare/39/aesthetics-raider">Aesthetics Raider</a>
+				My Ludum Dare 39 Compo game: <br/>
+				<a href="https://autumnyard.itch.io/aestheticsraider">Play it (link to itch.io)</a>
 				</br>
-				<a href="https://dl.dropboxusercontent.com/u/12486477/LudumDare39/index.html">Play in browser</a>
+				<a href="https://ldjam.com/events/ludum-dare/39/aesthetics-raider">Aesthetics Raider (link to LD entry)</a>
+				</br>
+				<a href="https://github.com/autumnyard/LudumDare39">Source code (link to Github)</a>
+
 			</p>
 			<p class="normal">
 				Unity Base Project 2D: <br/>
@@ -68,7 +71,7 @@
 			<!-- <p class="normal">I write music under the name Missing Date.</p> -->
 
 			<p class="subsection">Retrowave</p>
-			<p class="normal">I'm currently working on my sound.</p>
+			<p class="normal"><a href="https://soundcloud.com/missingdate/sets/missing-date-valencia-ep">Valencia EP (soundcloud)</a></p>
 
 			<p class="subsection">Video game music</p>
 			<!-- <p>Video game music:</p> -->
