--- a/autumnyard.com/index.html
+++ b/autumnyard.com/index.html
@@ -110,6 +110,7 @@
 
 			<p class="subsection">Photography</p>
 			<p class="normal">Check my <a href="https://500px.com/missingdate">500px</a></p>
+			<p class="normal">And my <a href="https://instagram.com/bonitapersona">instagram</a></p>
 
 			<!-- 
 			<p class="section">Personal</p>
@@ -127,10 +128,10 @@
 
 		<div class="content ">
 			<p class="section">Personal</p>
-			<p class="normal">Antes de nada, 
+			<!-- <p class="normal">Antes de nada, 
 				<a href="https://dl.dropboxusercontent.com/u/12486477/CV/CV2017%20Pablo%20de%20la%20Ossa%20ES.pdf">mi Curriculum Vitae</a>
 				<strike>(<a href="https://www.youtube.com/watch?v=_v8rsPZbGt0">in english</a></strike>)
-			</p>
+			</p> -->
 			<p class="normal">Contact me<a href="mailto:autumnyardworks@gmail.com"> by mail</a></p>
 			<p class="normal">And, even though I'm not into social networks:</p>
 			<p class="normal"><a href="https://www.instagram.com/bonitapersona/">Instagram</a></p>
